Configure Prisma and start implementaion

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ NEXT_PUBLIC_APPWRITE_TASKS_ID=
 NEXT_PUBLIC_APPWRITE_IMAGES_BUCKET_ID=
 
 NEXT_APPWRITE_KEY=
+
+PG_HOST=
+PG_USER=
+PG_PASSWORD=
+PG_DATABASE=
+
+DATABASE_URL=
